--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Metric Gain - Progressive Web App for Workout Tracking" />
-    <meta name="theme-color" content="#1a1a1a" />
+    <meta name="theme-color" content="#111827" />
+    <link rel="apple-touch-icon" href="/icon-192x192.png" />
     <title>Metric Gain</title>
   </head>
   <body>
