--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Metric Gain - Progressive Web App for Workout Tracking" />
+    <meta name="description" content="Strength Guider - The evidence-based strength guide that adapts to you" />
     <meta name="theme-color" content="#111827" />
     <link rel="apple-touch-icon" href="/icon-192x192.png" />
-    <title>Metric Gain</title>
+    <title>Strength Guider</title>
   </head>
   <body>
     <div id="root"></div>
