--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Strength Guider - The evidence-based strength guide that adapts to you" />
     <meta name="theme-color" content="#111827" />
-    <link rel="apple-touch-icon" href="/icon-192x192.png" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <title>Strength Guider</title>
   </head>
   <body>
